reports/bernoulli.log
Traceback (most recent call last):
  File "/home/britta/.local/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/britta/.local/lib/python3.10/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/britta/.local/lib/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/britta/.local/lib/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/usr/lib/python3.10/asyncio/base_events.py", line 646, in run_until_complete
    return future.result()
  File "/home/britta/.local/lib/python3.10/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/home/britta/.local/lib/python3.10/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/home/britta/.local/lib/python3.10/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
%matplotlib widget
:tags: ["hide-cell"]
import ipywidgets as widgets
import matplotlib.pyplot as plt
import numpy as np
from matplotlib.widgets import Slider, Button

import matplotlib
matplotlib.rcParams['mathtext.fontset'] = 'stix'
matplotlib.rcParams['font.family'] = 'STIXGeneral'

def bernoulli(phi):
    return [phi, 1-phi]

# Define values that x can take 
x_values = ['0', '1']

# Define initial phi 
init_phi = 0.5

# Compute probabilities
probs = bernoulli(init_phi)

fig, ax = plt.subplots()

bar_container = ax.bar(x_values, probs, width=0.35, color=(0.1, 0.7, 0.0, 0.6))

fig.subplots_adjust(bottom=0.25)
axprob = fig.add_axes([0.25, 0.1, 0.65, 0.03])
prob_slider = Slider(
    ax=axprob,
    label='Probability φ',
    valmin=0.0,
    valmax=1.0,
    valinit=init_phi,
    color=(0.1, 0.7, 0.0, 0.6)
)

# Change height of bars after moving the slider
def update(val):
    probs = bernoulli(val)
    for count, rect in zip([0,1], bar_container.patches):
        rect.set_height(probs[count])
    fig.canvas.draw_idle()


# Register the update function with the slider
prob_slider.on_changed(update)

ax.set_xlim(-0.5, 1.5)
ax.set_ylim(0, 1.1)
ax.set_ylabel('Probability')
ax.set_xlabel('Value of x')
ax.set_title('Bernoulli Distribution')

plt.show()
------------------

[0;36m  Cell [0;32mIn[1], line 2[0;36m[0m
[0;31m    :tags: ["hide-cell"][0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (1330475135.py, line 2)

